paasta status checks for backends set up in Envoy in addition to SmartStack+haproxy
